fix(slash): radio inputs style (flex-flow: row wrap)

--- a/slash/css/src/Form/Radio/Radio.scss
+++ b/slash/css/src/Form/Radio/Radio.scss
@@ -192,6 +192,7 @@
 .af-form__radio-group {
   display: flex;
   margin-right: 1rem;
+  flex-flow: row wrap;
 }
 
 .af-form__radio-group-classic {
